# nbgrader

./: .bowerrc  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  COPYING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  TODO.md  appveyor.yml  azure-pipelines.yml  bower.json  buildapi.py  codecov.yml  codemeta.json  conftest.py  default.profraw  dev-requirements-windows.txt  dev-requirements.txt  fabfile.py  flit.ini  install.json  package.json  playwright.config.ts  playwright.notebook.config.ts  pyproject.toml  pytest.ini  readthedocs-requirements.txt  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  setupegg.py  sitecustomize.py  tasks.py  (+7 more)
.github/: dependabot.yml  issue_template.md
.github/workflows/: binder.yaml  check-release.yml  test-docs-python-nbextensions.yml  test-docs-python.yml  test-extensions.yml  test-labextensions.yml  test.yml
appveyor/: run_with_env.cmd
binder/: jupyter_config.json  postBuild  start
conda.recipe/: bld.bat  build.sh  meta.yaml  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh
demos/: Dockerfile  README.md  deploy_demos.sh  formgrader_workspace.json  restart_demo.sh  utils.sh
demos/demo_multiple_classes/: course101_nbgrader_config.py  course123_nbgrader_config.py  global_nbgrader_config.py  jupyterhub_config.py  setup_demo.sh
demos/demo_one_class_multiple_graders/: course101_nbgrader_config.py  global_nbgrader_config.py  jupyter_server_config.py  jupyterhub_config.py  setup_demo.sh
demos/demo_one_class_one_grader/: instructor_nbgrader_config.py  jupyter_server_config.py  jupyterhub_config.py  setup_demo.sh
docs/: Index.ipynb  Makefile  README.md  autogen_command_line.py  autogen_config.py  build_docs.py  clear_docs.py  fabfile.py  ipython_nbconvert_config.py  make.bat  requirements.txt
docs/command_line_tools/: Index.ipynb  Makefile  ipython_nbconvert_config.py  nbgrader assign.ipynb  nbgrader autograde.ipynb  nbgrader feedback.ipynb  nbgrader formgrade.ipynb  nbgrader submit.ipynb  nbgrader validate.ipynb
docs/source/: autograding.rst  build_docs.py  changelog.rst  clear_docs.py  conf.py  creating.rst  formgrading.rst  index.rst  install.rst  spelling_wordlist.txt
docs/user_guide/: 1 - Installing.ipynb  2 - Developing assignments.ipynb  3 - Releasing assignments.ipynb  4 - Autograding.ipynb  5 - Grading with Google Forms.ipynb  5 - Manual grading.ipynb  6 - Returning feedback.ipynb  Index.ipynb  Makefile
examples/: Assignment Solution.ipynb  Assignment Template.ipynb  Assignment.ipynb  StudentNotebook.ipynb  TeacherNotebook.ipynb  header.ipynb  nbgrader_assign_config.py  nbgrader_solution_config.py  rubric.json  tests.json
git-hooks/: post-checkout
nbextensions/: nbgrader.css  nbgrader.js
nbgrader/: __init__.py  __main__.py  _version.py  alembic.ini  api.py  config.py  coursedir.py  dbutil.py  exchange.py  install.py  nbgrader_extension.py  release.py  student.py  utils.py  validator.py
nbgrader/alembic/: env.py
nbgrader/apps/: __init__.py  api.py  assignapp.py  autogradeapp.py  baseapp.py  collectapp.py  customnbconvertapp.py  dbapp.py  exportapp.py  extensionapp.py  feedbackapp.py  fetchapp.py  fetchassignmentapp.py  fetchfeedbackapp.py  formgradeapp.py  generateassignmentapp.py  generateconfigapp.py  generatefeedbackapp.py  generatesolutionapp.py  instantiatetestsapp.py  listapp.py  nbgraderapp.py  notebookapp.py  pushapp.py  quickstartapp.py  releaseapp.py  releaseassignmentapp.py  releasefeedbackapp.py  solutionapp.py  submitapp.py  updateapp.py  validateapp.py  zipcollectapp.py
nbgrader/auth/: __init__.py  base.py  hubauth.py  jupyterhub.py  noauth.py  notebookauth.py
nbgrader/converters/: __init__.py  assign.py  autograde.py  base.py  feedback.py  generate_assignment.py  generate_feedback.py  generate_solution.py  generate_source_with_tests.py  instantiate_tests.py
nbgrader/docs/: make.bat
nbgrader/exchange/: __init__.py  collect.py  exchange.py  exchange_factory.py  fetch.py  fetch_assignment.py  fetch_feedback.py  fetchfeedback.py  list.py  release.py  releaseFeedback.py  release_assignment.py  release_feedback.py  submit.py
nbgrader/exporters/: __init__.py  assignmentexporter.py  feedbackexporter.py
nbgrader/formgrader/: __init__.py  apihandlers.py  base.py  formgrade.py  handlers.py
nbgrader/html/: formgrade.py
nbgrader/nbformat/: common.py  v1.json  v1.py
nbgrader/nbgraderformat/: __init__.py  common.py  v1.json  v1.py  v2.json  v2.py  v3.json  v3.py  v4.json  v4.py
nbgrader/plugins/: __init__.py  base.py  export.py  latesubmission.py  zipcollect.py
nbgrader/postprocessors/: __init__.py  checkduplicateflag.py  serveformgrader.py
nbgrader/preprocessors/: __init__.py  assign.py  base.py  checkcellmetadata.py  checkgradeids.py  clearhiddentests.py  clearmarkingscheme.py  clearoutput.py  clearsolutions.py  computechecksums.py  deduplicateids.py  displayautogrades.py  execute.py  extracttests.py  findstudentid.py  getgrades.py  gform.py  headerfooter.py  ignorepattern.py  instantiatetests.py  latesubmissions.py  limitoutput.py  limittestcellheights.py  lockcells.py  overwritecells.py  overwritegradecells.py  overwritekernelspec.py  removeexecutioninfo.py  removehidden.py  rendersolutions.py  saveautogrades.py  savecells.py  savegradecells.py  toc.py
nbgrader/server_extensions/: formgrader.py
nbgrader/templates/: __init__.py  formgrade.tpl  gform.tpl
nbgrader/tests/: __init__.py  __main__.py  base.py  conftest.py  fakeuser.py  test_api.py  (+25 more)
paper/: paper.bib  paper.md
schema/: assignment-list.json  course-list.json  formgrader.json  plugin.json
scripts/: nbgrader  runtests
src/: index.ts
style/: assignment_list.css  common.css  course_list.css  create_assignment.css  index.css  index.js  validation_message.css
tests/: base.py  test_assign_preprocessor.py  test_clearsolutions.py  test_extracttests.py  test_headerfooter.py  test_nbgrader_extension.py  test_rendersolutions.py  test_toc.py
tools/: backport_pr.py  changelog.py  conda_build.sh  contributer_list.py  gh_api.py  post-bump.py  release.py
(+685 files in other folders)
