[build-system]
requires = ["jupyter_packaging~=0.12.0", "jupyterlab<4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["nbgrader/labextension/static/style.js"]
ensured-targets = ["nbgrader/labextension/static/style.js", "nbgrader/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["nbgrader/labextension/**", "yarn.lock"]

[tool.tbump.version]
current = "0.8.0.dev"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "grep -q {new_version} CHANGELOG.md"

[[tool.tbump.file]]
src = "nbgrader/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}")'

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "package.json"
version_template = "{major}.{minor}.{patch}"
search = '"version": "{current_version}"'

[[tool.tbump.file]]
src = "nbgrader/nbextensions/assignment_list/main.js"

[[tool.tbump.file]]
src = "nbgrader/nbextensions/course_list/main.js"

[[tool.tbump.file]]
src = "nbgrader/nbextensions/validate_assignment/main.js"

[[tool.tbump.field]]
name = "channel"
default = ""
