[metadata]
name = nbgrader
version = attr: nbgrader._version.__version__
description = A system for assigning and grading notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter/nbgrader
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, Notebooks, Grading, Homework
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    sqlalchemy>=1.4,<2
    python-dateutil>=2.8
    notebook>=6.4,<7
    nbconvert>=6
    requests>=2.26
    jsonschema>=3
    alembic>=1.7
    rapidfuzz>=1.8
    Jinja2>=3
    MarkupSafe<2.2.0
    jupyter_client<8
    jupyter_server>=1.12
    qtconsole>=5.2
    ipywidgets>=7.6
    nbclient>=0.6.1

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    myst-parser
tests =
    pytest==7.1.2
    pytest-cov
    pytest-rerunfailures
    pytest-xdist==2.5.0
    coverage
    selenium>2.4
    codecov
    nbval
    requests-mock
    wheel
    tbump

[options.entry_points]
console_scripts =
    nbgrader = nbgrader.apps.nbgraderapp:main
